# wxwidgets_template

./: .gitignore  CMakeLists.txt  README.md  run-clang-format.sh
src/: CMakeLists.txt  Info.plist  main.cpp
tests/: CMakeLists.txt  test_aaa.cpp
